<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="menutitle_addTask">Add a new task</string>
    <string name="menumain_showDurations">Durations report</string>
    <string name="menumein_settings">Settings</string>
    <string name="menumain_showAbout">About Task Timer</string>
    <string name="menumain_generate">Generate Data</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Button to edit task details</string>
    <string name="delete_button_description">Button to delete task</string>
    <string name="addedit_name_hint">Task Name: required</string>
    <string name="addedit_description_hint">Task Description (optional)</string>
    <string name="addedit_sortorder_hint">Order for sorting (low to high)</string>
    <string name="addedit_save">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort order will be placed higher up in the list. Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task <b>and will stop the timer for any previous task that was being timed.</b></string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting a task will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cancelEditDialogMessage">You have unsaved changes. Do you want to abandon the changes or continue editing ?</string>
    <string name="cancelEditDialog_positive_caption">Continue editing</string>
    <string name="cancelEditDialog_negative_caption">Abandon changes</string>
    <string name="about_copyright">Copyright © 2020 Annan Vora \nhttps://www.udemy.com/course/master-android-7-nougat-java-app-development-step-by-step/</string>
    <string name="about_weblink">Instructions available at www.learnprogramming.academy/tasktimer</string>
    <string name="about_email">Support: annan.vora@gmail.com | tasktimer@learnprogramming.academy</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org by <b> Anonymous</b></string>
    <string name="current_timing_text">Timing %1$s</string>
    <string name="td_text_name">Task Name</string>
    <string name="td_text_date">Date</string>
    <string name="td_text_duration">Duration</string>
    <string name="td_text_description">Description</string>
    <string name="title_activity_durations_report">DurationsReport</string>
    <string name="rm_title_filter_day">Show Day</string>
    <string name="rm_title_filter_week">Show Week</string>
    <string name="rm_title_filter_date">Set Report Date</string>
    <string name="rm_title_delete">Delete old timings</string>
    <string name="date_title_filter">Select Date for report</string>
    <string name="date_title_delete">Select Date to delete up-to</string>
    <string name="delete_timings_message">\"Are you sure you want to delete all timings before %1s?"</string>
    <string name="settings_text_ignore">Ignore tasks which have been timed for less than…</string>
    <string name="settings_start_day">Choose the start of your week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="durations_report_activity_title">Reports</string>
</resources>