<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings_startWeek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/settings_start_day"
        android:textColor="@color/primary_text"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/days"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/monday_radio"
        app:layout_constraintStart_toStartOf="@+id/settings_startWeek"
        app:layout_constraintTop_toBottomOf="@+id/settings_startWeek">

        <RadioButton
            android:id="@+id/monday_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textColor="@color/secondary_text"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/tuesday_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tuesday"
            android:textColor="@color/secondary_text"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/wednesday_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/wednesday"
            android:textColor="@color/secondary_text"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/thursday_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/thursday"
            android:textColor="@color/secondary_text"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/friday_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/friday"
            android:textColor="@color/secondary_text"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/saturday_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/saturday"
            android:textColor="@color/secondary_text"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/sunday_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sunday"
            android:textColor="@color/secondary_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>

    <TextView
        android:id="@+id/settings_text_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/settings_text_ignore"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/days"
        app:layout_constraintStart_toStartOf="@+id/settings_startWeek"/>

    <SeekBar
        android:id="@+id/slider"
        style="@android:style/Widget.Material.Light.SeekBar"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:indeterminate="false"
        android:max="59"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/settings_text_slider"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_slider" />

</androidx.constraintlayout.widget.ConstraintLayout>